<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_ranking_mode"
        android:icon="@drawable/ic_category_24dp"
        android:title="@string/ranking_mode"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_ranking_mode_day"
                android:title="@string/ranking_mode_day"/>
            <item
                android:id="@+id/action_ranking_mode_day_male"
                android:title="@string/ranking_mode_day_male"/>
            <item
                android:id="@+id/action_ranking_mode_day_female"
                android:title="@string/ranking_mode_day_female"/>
            <item
                android:id="@+id/action_ranking_mode_day_r18"
                android:title="@string/ranking_mode_day_r18"/>
            <item
                android:id="@+id/action_ranking_mode_day_male_r18"
                android:title="@string/ranking_mode_day_male_r18"/>
            <item
                android:id="@+id/action_ranking_mode_day_female_r18"
                android:title="@string/ranking_mode_day_female_r18"/>
            <item
                android:id="@+id/action_ranking_mode_week"
                android:title="@string/ranking_mode_week"/>
            <item
                android:id="@+id/action_ranking_mode_week_original"
                android:title="@string/ranking_mode_week_original"/>
            <item
                android:id="@+id/action_ranking_mode_week_rookie"
                android:title="@string/ranking_mode_week_rookie"/>
            <item
                android:id="@+id/action_ranking_mode_week_r18"
                android:title="@string/ranking_mode_week_r18"/>
            <item
                android:id="@+id/action_ranking_mode_week_r18g"
                android:title="@string/ranking_mode_week_r18g"/>
            <item
                android:id="@+id/action_ranking_mode_month"
                android:title="@string/ranking_mode_month"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_ranking_date"
        android:icon="@drawable/ic_today_24dp"
        android:title="@string/ranking_date"
        app:showAsAction="ifRoom"/>
</menu>