<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_font_size"
        android:icon="@drawable/ic_format_size_outline_24dp"
        android:title="@string/novel_reader_font_size"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_author"
        android:icon="@drawable/ic_baseline_account_circle_24dp"
        android:title="@string/novel_reader_author"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_outline_24dp"
        android:title="@string/common_share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_comments"
        android:icon="@drawable/ic_outline_comment_24dp"
        android:title="@string/illust_detail_comments"
        app:showAsAction="never"/>
</menu>