<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"/>

    <FrameLayout
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="top"
            android:background="@drawable/shadow_detail_top"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="bottom"
            android:background="@drawable/shadow_detail_bottom"/>
    </FrameLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        style="@style/AppBarTransparentStyle">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"/>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_shortcut"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/download"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_get_app_outline_24dp"
            android:tint="@color/white"
            android:contentDescription="@string/common_download"
            android:background="@drawable/background_selectable_item_black"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/download_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_save_alt_outline_24dp"
            android:tint="@color/white"
            android:contentDescription="@string/common_download_all"
            android:background="@drawable/background_selectable_item_black"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_share_outline_24dp"
            android:tint="@color/white"
            android:contentDescription="@string/common_share"
            android:background="@drawable/background_selectable_item_black"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>