<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/spacing_16dp"
        android:padding="@dimen/spacing_5dp"
        android:src="@drawable/ic_settings_applications_outline_24dp"
        android:contentDescription="@string/title_settings"
        style="@style/ClickableItemBorderlessStyle"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">
            <View
                android:layout_width="0dp"
                android:layout_height="20dp" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/title_login"
                    android:textColor="?attr/colorPrimary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />
                <Space
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/login_register"
                    android:textColor="?android:textColorSecondary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    style="@style/ClickableItemBorderlessStyle"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="65dp"
                android:layout_height="4dp"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:background="?attr/colorPrimary"/>
            <View
                android:layout_width="0dp"
                android:layout_height="10dp" />
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="?materialCardViewStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="10dp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_username"
                        app:counterEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text|textPersonName|textAutoComplete"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="10dp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password"
                        app:counterEnabled="true"
                        app:passwordToggleEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/login_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <View
                android:layout_width="0dp"
                android:layout_height="20dp" />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <Button
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_sign_in"
                    style="?materialButtonOutlinedStyle"/>
                <include
                    layout="@layout/progress_bar_circular"
                    android:id="@+id/progress_circular"
                    android:visibility="invisible"/>
            </FrameLayout>
            <TextView
                android:paddingTop="15dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:id="@+id/error_msg"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>
